--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
 Hotkeys for SNES Controls
 Help dialog
-Full Installation Version
-Doesn't close all windows of EmoTracker
 UI for building layouts
 Super Metroid memory tinker (refill health/ammo, blue suit, items/bosses?)
 Info from current ROM displayed
+
+v0.3
+Update Readme
+License?
+
